samples/express/views/errors/child.njk
{% extends "base.njk" %}

{% block content %}
<p>This content will not be shown because the parent has an error.</p>
{% endblock %}
